testsuite/tests/typecheck/should_fail/tcfail009.alan
arrays() : proc
  i : int;
  a : int [5];
{
  i = a['a'] + 4;
  i = a['a' + 3];
  a[4] = i[3];
}
